Se agrego una pagina de formulario de adopcion

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adopta, ¡salva una vida!</title>
-    <link href="./Assets/Styles/Style.css" rel="stylesheet" >
+    <link href="./Assets/Styles/Style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,12 +16,15 @@
     <h2 id="subtitle" class="titles">Animlales en adopción</h2>
     <h3 id="cuyo" class="titles">Jorge el cuyito</h3>
     <img src="cuyo.webp" id="cuyoImg" class="img">
-    <p id="cuyoDesc" class="descriptions">Este amigable amiguito será parte fundamental en tus días, llenos de energía, lo verás corriendo todo el día y su
+    <p id="cuyoDesc" class="descriptions">Este amigable amiguito será parte fundamental en tus días, llenos de energía,
+        lo verás corriendo todo el día y su
         sonido particular hará que quieras cargarlo siempre.<br> ¿No sabes los cuidados necesarios? Haz click <a
-            href="https://www.youtube.com/watch?v=pzsYzYb8G8Y" target="_blank">aquí</a> para encontrar una guía básica.</p><br>
+            href="https://www.youtube.com/watch?v=pzsYzYb8G8Y" target="_blank">aquí</a> para encontrar una guía básica.
+    </p><br>
     <h3 id="gato" class="titles">El pana Miguel</h3><br>
     <img src="gato.jpeg" id="gatoImg" class="img">
-    <p id="gatoDesc" class="descriptions">El pana Miguel es un gatito muy juguetón, ama el pollo asado y jugar con otros gatitos.
+    <p id="gatoDesc" class="descriptions">El pana Miguel es un gatito muy juguetón, ama el pollo asado y jugar con otros
+        gatitos.
         Es muy sociable y convive con perros y otras especies. También le gusta que lo apapachen y está buscando una
         familia que lo quiera mucho.<br>
         Desde muy pequeñito fué encontrado en la basura junto con sus 3 hermanitos y, lamentablemente, fué el único que
@@ -29,20 +32,28 @@
     </p>
     <h3 id="perros" class="titles">Gregorio y su carnalito</h3>
     <img src="perro.webp" id="perrosImg" class="img">
-    <p id="perrosDesc" class="descriptions">Gregorio y Juanito son un par de perritos que fueron abandonados por su mami, están llenos de amor, ganas de
+    <p id="perrosDesc" class="descriptions">Gregorio y Juanito son un par de perritos que fueron abandonados por su
+        mami, están llenos de amor, ganas de
         jugar y de ser parte de una familia que les pueda dar amor tanto como ellos quieren dar amor, es adopción 2x1!
     </p>
     <h3 id="huron" class="titles">Max</h3>
     <img src="huron.jpeg" id="huronImg" class="img">
-    <p id="huronDesc" class="descriptions">Max es un hurón muy activo y divertido que le encanta explorar su entorno y jugar con juguetes, es una excelente
+    <p id="huronDesc" class="descriptions">Max es un hurón muy activo y divertido que le encanta explorar su entorno y
+        jugar con juguetes, es una excelente
         opción para quien desea una mascota inteligente y curiosa. Es muy cariñoso y le encanta pasar tiempo con su
         familia humana y otros hurones. Debes llevarlo al médico para chequeos constantes y prestar atención a sus demás
         necesidades</p>
     <h3 id="tortuga" class="titles">Mordelon</h3>
     <img src="tortuga.avif" id="tortugaImg" class="img">
-    <p id="tortugaDesc" class="descriptions">El es mordelon, no se dejen engañar por su nombre, es una tortuga muy tranquila que gusta de comer frutas y tomar el sol por la tarde y nadar en una pequeña piscina. Mordelon tiene 5 años y le gustaría ser adoptado.</p>
+    <p id="tortugaDesc" class="descriptions">El es mordelon, no se dejen engañar por su nombre, es una tortuga muy
+        tranquila que gusta de comer frutas y tomar el sol por la tarde y nadar en una pequeña piscina. Mordelon tiene 5
+        años y le gustaría ser adoptado.</p>
     <h3 id="moreInfo" class="titles">Otra información</h3>
-    <p class="AddInfo">Si requieres más información acerca de los beneficios de adoptar, puedes seguir <a href="https://www.respetmascotas.com/posts/beneficios-adoptar-mascotas.aspx" target="_blank">este enlace</a></p>
+    <p class="AddInfo">Si requieres más información acerca de los beneficios de adoptar, puedes seguir <a
+            href="https://www.respetmascotas.com/posts/beneficios-adoptar-mascotas.aspx" target="_blank">este enlace</a>
+    </p>
+
+    <p>¿Te interesa adoptar? da clic <a href="./cuestionario.html" target="_blank">aquí</a> para empezar el proceso</p>
 </body>
 
 </html>
